force-app/main/default/objects/Opportunity/fields/Client_Onboarding_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Client_Onboarding_Sheet__c</fullName>
    <label>Client Onboarding Sheet</label>
    <type>Url</type>
</CustomField>