force-app/main/default/objects/Opportunity/fields/Competitor_Average_FIXED_Bid__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Average_FIXED_Bid__c</fullName>
    <label>Competitor Average FIXED Bid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>