force-app/main/default/objects/Opportunity/fields/Competitors__c.field-meta.xml
<CustomField>
    <fullName>Competitors__c</fullName>
    <label>Current Generator(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>