force-app/main/default/objects/Opportunity/fields/CustomerSignatureURL__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignatureURL__c</fullName>
    <label>CustomerSignatureURL</label>
    <type>Url</type>
</CustomField>