force-app/main/default/objects/Opportunity/fields/Google_Space_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Space_Id__c</fullName>
    <label>Google Space Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>