force-app/main/default/objects/Opportunity/fields/Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Paid__c</fullName>
    <label>Invoice Paid?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Contested</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>