force-app/main/default/objects/Opportunity/fields/KB_Actual_End__c.field-meta.xml
<CustomField>
    <fullName>KB_Actual_End__c</fullName>
    <label>KB Actual End</label>
    <type>Date</type>
</CustomField>