force-app/main/default/objects/Opportunity/fields/KB_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>KB_Actual_Start__c</fullName>
    <label>KB Actual Start</label>
    <type>Date</type>
</CustomField>