force-app/main/default/objects/Opportunity/fields/KB_Planned_End__c.field-meta.xml
<CustomField>
    <fullName>KB_Planned_End__c</fullName>
    <label>KB Planned End</label>
    <type>Date</type>
</CustomField>