force-app/main/default/objects/Opportunity/fields/KB_Planned_Start__c.field-meta.xml
<CustomField>
    <fullName>KB_Planned_Start__c</fullName>
    <label>KB Planned Start</label>
    <type>Date</type>
</CustomField>