force-app/main/default/objects/Opportunity/fields/Last_Step__c.field-meta.xml
<CustomField>
    <fullName>Last_Step__c</fullName>
    <inlineHelpText>Updates automatically when &quot;Next Steps&quot; are updated</inlineHelpText>
    <label>Last Step</label>
    <type>TextArea</type>
</CustomField>