force-app/main/default/objects/Opportunity/fields/LodestoneAI_Overview__c.field-meta.xml
<CustomField>
    <fullName>LodestoneAI_Overview__c</fullName>
    <label>LodestoneAI Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>