force-app/main/default/objects/Opportunity/fields/Number_of_Competitors_If_Known__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Competitors_If_Known__c</fullName>
    <label>Number of Competitors (If Known)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>