force-app/main/default/objects/Opportunity/fields/Original_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Created_Date__c</fullName>
    <label>Original Created Date (from migration)</label>
    <type>DateTime</type>
</CustomField>