force-app/main/default/objects/Opportunity/fields/Packages__c.field-meta.xml
<CustomField>
    <fullName>Packages__c</fullName>
    <label>Packages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Digital Engagement</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Health Cloud</fullName>
            </value>
            <value>
                <fullName>Integration Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
            <value>
                <fullName>Salesforce Maps</fullName>
            </value>
            <value>
                <fullName>Salesforce Scheduler</fullName>
            </value>
            <value>
                <fullName>Sales Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>