force-app/main/default/objects/Opportunity/fields/Portal_Production_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Production_Login_URL__c</fullName>
    <label>Portal Production Login URL</label>
    <type>Url</type>
</CustomField>