force-app/main/default/objects/Opportunity/fields/Portal_Production_Password__c.field-meta.xml
<CustomField>
    <fullName>Portal_Production_Password__c</fullName>
    <label>Portal Production Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>