force-app/main/default/objects/Opportunity/fields/Portal_Sandbox_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sandbox_Login_URL__c</fullName>
    <label>Portal Sandbox Login URL</label>
    <type>Url</type>
</CustomField>