force-app/main/default/objects/Opportunity/fields/Portal_Sandbox_Password__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sandbox_Password__c</fullName>
    <label>Portal Sandbox Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>