force-app/main/default/objects/Opportunity/fields/Portal_Sandbox_Username__c.field-meta.xml
<CustomField>
    <fullName>Portal_Sandbox_Username__c</fullName>
    <label>Portal Sandbox Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>