force-app/main/default/objects/Opportunity/fields/Portal_User_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User Owner</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>