force-app/main/default/objects/Opportunity/fields/Production_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Production_Login_URL__c</fullName>
    <label>Production Login URL</label>
    <type>Url</type>
</CustomField>