force-app/main/default/objects/Opportunity/fields/Production_Password__c.field-meta.xml
<CustomField>
    <fullName>Production_Password__c</fullName>
    <label>Production Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>