force-app/main/default/objects/Opportunity/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>Go Live</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>