force-app/main/default/objects/Opportunity/fields/Project_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Project_Tracker__c</fullName>
    <label>Project Tracker</label>
    <type>Url</type>
</CustomField>