force-app/main/default/objects/Opportunity/fields/Sandbox_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Login_URL__c</fullName>
    <label>Sandbox Login URL</label>
    <type>Url</type>
</CustomField>