force-app/main/default/objects/Opportunity/fields/Sandbox_Username__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Username__c</fullName>
    <label>Sandbox Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>