force-app/main/default/objects/Opportunity/fields/Security_Question__c.field-meta.xml
<CustomField>
    <fullName>Security_Question__c</fullName>
    <label>Security Question?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>