force-app/main/default/objects/Opportunity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>TLG_Team__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>