force-app/main/default/objects/Opportunity/fields/TLG_Address__c.field-meta.xml
<CustomField>
    <fullName>TLG_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>