force-app/main/default/objects/Opportunity/fields/TLG_BCC_Email__c.field-meta.xml
<CustomField>
    <fullName>TLG_BCC_Email__c</fullName>
    <label>BCC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>