force-app/main/default/objects/Opportunity/fields/TLG_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>TLG_CC_Email__c</fullName>
    <label>CC Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>