force-app/main/default/objects/Opportunity/fields/TLG_Signed__c.field-meta.xml
<CustomField>
    <fullName>TLG_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed</label>
    <type>Checkbox</type>
</CustomField>