force-app/main/default/objects/Opportunity/fields/TLG_Signed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TLG_Signed_Date_Time__c</fullName>
    <label>Signed Date Time</label>
    <type>DateTime</type>
</CustomField>