force-app/main/default/objects/Opportunity/fields/TLG_Version__c.field-meta.xml
<CustomField>
    <fullName>TLG_Version__c</fullName>
    <label>Version</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>