force-app/main/default/objects/Opportunity/fields/Total_Actual_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Time__c</fullName>
    <inlineHelpText>Shows the total actual time utilized from all related cases</inlineHelpText>
    <label>Total Actual Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>