force-app/main/default/objects/Opportunity/fields/Total_Estimated_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Time__c</fullName>
    <inlineHelpText>The total estimated time required from all cases related to this opportunity</inlineHelpText>
    <label>Total Estimated Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>