force-app/main/default/objects/Opportunity/fields/Total_Hours_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Purchased__c</fullName>
    <inlineHelpText>How many hours have been purchased by the Client?</inlineHelpText>
    <label>Total Hours Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>