force-app/main/default/objects/Opportunity/fields/Utilization__c.field-meta.xml
<CustomField>
    <fullName>Utilization__c</fullName>
    <formula>Total_Actual_Time__c / Total_Hours_Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>