force-app/main/default/objects/Opportunity/fields/Welcome_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Date__c</fullName>
    <label>Welcome Email Date</label>
    <type>Date</type>
</CustomField>