force-app/main/default/objects/Opportunity/fields/WHCDB_Days_since_last_update_or_activity__c.field-meta.xml
<CustomField>
    <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
    <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last update or activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>